; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hv_4t_4w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_hevcdsp_msa.c_hevc_hv_4t_4w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32*, i32)* @hevc_hv_4t_4w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hevc_hv_4t_4w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32* %5, i32 %6) #0 {
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load i32, i32* %14, align 4
  %16 = icmp eq i32 2, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %7
  %18 = load i32*, i32** %8, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32, i32* %11, align 4
  %22 = load i32*, i32** %12, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = call i32 @hevc_hv_4t_4x2_msa(i32* %18, i32 %19, i32* %20, i32 %21, i32* %22, i32* %23)
  br label %51

25:                                               ; preds = %7
  %26 = load i32, i32* %14, align 4
  %27 = icmp eq i32 4, %26
  br i1 %27, label %28, label %36

28:                                               ; preds = %25
  %29 = load i32*, i32** %8, align 8
  %30 = load i32, i32* %9, align 4
  %31 = load i32*, i32** %10, align 8
  %32 = load i32, i32* %11, align 4
  %33 = load i32*, i32** %12, align 8
  %34 = load i32*, i32** %13, align 8
  %35 = call i32 @hevc_hv_4t_4x4_msa(i32* %29, i32 %30, i32* %31, i32 %32, i32* %33, i32* %34)
  br label %50

36:                                               ; preds = %25
  %37 = load i32, i32* %14, align 4
  %38 = srem i32 %37, 8
  %39 = icmp eq i32 0, %38
  br i1 %39, label %40, label %49

40:                                               ; preds = %36
  %41 = load i32*, i32** %8, align 8
  %42 = load i32, i32* %9, align 4
  %43 = load i32*, i32** %10, align 8
  %44 = load i32, i32* %11, align 4
  %45 = load i32*, i32** %12, align 8
  %46 = load i32*, i32** %13, align 8
  %47 = load i32, i32* %14, align 4
  %48 = call i32 @hevc_hv_4t_4multx8mult_msa(i32* %41, i32 %42, i32* %43, i32 %44, i32* %45, i32* %46, i32 %47)
  br label %49

49:                                               ; preds = %40, %36
  br label %50

50:                                               ; preds = %49, %28
  br label %51

51:                                               ; preds = %50, %17
  ret void
}

declare dso_local i32 @hevc_hv_4t_4x2_msa(i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @hevc_hv_4t_4x4_msa(i32*, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @hevc_hv_4t_4multx8mult_msa(i32*, i32, i32*, i32, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
